--- a/src/css/components/register_cta.css
+++ b/src/css/components/register_cta.css
@@ -13,6 +13,7 @@
 		}
 		@media (--mobile-small){
 			padding: $margin3-mobile 20px;
+			font-size: 1em;
 		}
 	}
 
@@ -37,6 +38,7 @@
 
 		@media (--mobile-small){
 			padding: $margin3-mobile 20px;
+			font-size: 1em;
 		}
 	}
 
